# 28-practical

Simulation of an online restaurant kitchen/: CMakeLists.txt
Simulation of an online restaurant kitchen/include/: kitchen.h
Simulation of an online restaurant kitchen/source/: CMakeLists.txt  kitchen.cpp  main.cpp
Simulation of the station operation/: CMakeLists.txt
Simulation of the station operation/include/: train.h
Simulation of the station operation/source/: CMakeLists.txt  main.cpp  train.cpp
Swimming for 100 meters/: CMakeLists.txt
Swimming for 100 meters/include/: swimmer.h
Swimming for 100 meters/source/: CMakeLists.txt  main.cpp  swimmer.cpp
